--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -49,23 +49,25 @@ Queries support all operators and functions provided by Tcl expr.
 
 Some extra functions are available:
 
-=== Tools ===
+=== Bio functions ===
+; **region("chromosome:begin-end",...)**: is true for any region in dataset that overlaps the given regions.
+Can also be given as region(chromosome,begin,end,...).
+If the chromosome value in the query or the data file starts with chr, this part is ignored: chr2 will match 2, as wel as Chr2.
+; **hovar(samplename)**: true if the given sample is a homozygous variant. This is equivalent to ($sequenced-samplename == "v" && $alleleSeq1-samplename == $alleleSeq2-samplename)
+
+=== Number functions ===
+; **between(value,{min max})**: true of value is >= min and <= max (e.g. "between($begin,1000,2000)")
+This function can also be used as an operand, eg "$field between {1 2}"
 ; **min(a1,a2,...)**: returns the minimum of a1, a2, ...
 a1, etc. can be a list of numbers (separated by commas, spaces or ;).
 If one of the args is not a number it will be replaced by Inf
 ; **max(a1,a2,...)**: returns the maximum of a1, a2, ...
 a1, etc. can be a list of numbers (separated by commas, spaces or ;).
 If one of the args is not a number it will be replaced by -Inf
-; **oneof($field,value1,cvalue2,...)**: returns true if the given field matches one of the values
-The default value for non-numeric arguments can be set e.g. to 1000 by giving def=1000 as the first argument
-; **between(value,{min max})**: true of value is >= min and <= max (e.g. "between($begin,1000,2000)")
-This function can also be used as an operand, eg "$field between {1 2}"
 ; **avg(value,...)**: returns the average of the values given. Non-number values are ignored.
 If no number was given, the answer will be NaN
-; **region("chromosome:begin-end",...)**: is true for any region in dataset that overlaps the given regions.
-Can also be given as region(chromosome,begin,end,...).
-If the chromosome value in the query or the data file starts with chr, this part is ignored: chr2 will match 2, as wel as Chr2.
-; **regexp(value,pattern): true if value matches the regular expression given by **pattern**
+; **isnum(value)**: true if value is a valid number
+; **percent(value)**: returns a fraction as a percent 
 
 === fields that contain comma separated lists ===
 Some fields can contain multiple values in the form of a comma or ; separated list. The following functions allow
@@ -79,6 +81,11 @@ using this in queries
 This can also be used as an operand: $field contains value
 ; **shares($field, valuelist)**; true if the list in **field** and the list in **valuelist** (a SPACE separated list!) share a value.
 This can also be used as an operand: $field shares valuelist
+
+=== String functions ===
+; **oneof($field,value1,cvalue2,...)**: returns true if the given field matches one of the values
+The default value for non-numeric arguments can be set e.g. to 1000 by giving def=1000 as the first argument
+; **regexp(value,pattern)**: true if value matches the regular expression given by **pattern**
 
 === multifield functions ===
 The following functions address multiple fields.
