cg_process_sample converted to use cgmake

--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -1,10 +1,10 @@
 = Process =
 
 == Format ==
-cg process_sample sampledir destdir dbdir ?force?
+cg process_sample sampledir destdir ?force?
 
 == Summary ==
-Convert Complete Genomics data to cg format
+Convert Complete Genomics data to cg format and add several analysis files
 
 == Description ==
 processes (sorting annotating, etc.) one Complete Genomics sample directory, and writes
@@ -13,7 +13,6 @@ the adapted data into destdir. By default, only files that are not present alrea
 == Arguments ==
 ; **sampledir**: data directory as it comes from Complete Genomics
 ; **destdir**: data directory to be created, containing data in the cg format
-; **dbdir**: database directory with reference sequence, etc.
 ; **force**: When force is given as a parameter, everything will be recalculated and overwritten."
 
 == Category ==
