--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -68,19 +68,44 @@ If one of the args is not a number it will be replaced by -Inf
 If no number was given, the answer will be NaN
 ; **isnum(value)**: true if value is a valid number
 ; **percent(value)**: returns a fraction as a percent 
+; **def(value,default)**: if value is not a number, it returns the given default, otherwise value
 
-=== fields that contain comma separated lists ===
-Some fields can contain multiple values in the form of a comma or ; separated list. The following functions allow
-using this in queries
+=== vector functions (comma separated lists) ===
+Some fields can contain multiple values in the form of a comma (or ; or space) separated 
+list (further called vector).
+The following functions allow use of vectors in queries
 
-; **lmin($field, ...)**: the minimum of the list of numbers (comma or space or ; separated) in field. A default value (Inf) is given for non-numeric characters (-)
-; **lmind($field, ..., def)**: same as lmin, but you can set the default value for non-numeric characters is given as the last parameter
-; **lmax($field, ...)**: the maximum of the list of numbers (comma or space or ; separated) in field. A default value (-Inf) is given for non-numeric characters (-)
-; **lmaxd($field, ..., def)**: same as lmax, but you can set the default value for non-numeric characters is given as the last parameter
-; **contains($field, value)**; true if the list in **field** contains **value**. 
-This can also be used as an operand: $field contains value
-; **shares($field, valuelist)**; true if the list in **field** and the list in **valuelist** (a SPACE separated list!) share a value.
-This can also be used as an operand: $field shares valuelist
+; **lmin(vector, ...)**: the minimum of the list of numbers in vector(s). A default value (Inf) is given for non-numeric characters (-)
+; **lmind(vector, ..., def)**: same as lmin, but you can set the default value for non-numeric characters is given as the last parameter
+; **lminpos(vector, ...)**: position (within the index) of the minimum value. If more than one vector is given, the position of the minimum of all vectors is given
+; **lmax(vector, ...)**: the maximum of the vector. A default value (-Inf) is given for non-numeric characters (-)
+; **lmaxd(vector, ..., def)**: same as lmax, but you can set the default value for non-numeric characters is given as the last parameter
+; **lmaxpos(vector, ...)**: position (within the index) of the maximum value. If more than one vector is given, the position of the maximum of all vectors is given
+This can also be used as an operand: vector shares valuelist
+
+; **lindex(vector, position)**: the value of the element at the given **position** in the list. The first element is at position 0!
+; **contains(vector, value)**; true if the list in **field** contains **value**. 
+This can also be used as an operand: vector contains value
+; **shares(vector, valuelist)**; true if the list in **field** and the list in **valuelist** (a SPACE separated list!) share a value.
+; **lone(vector)**: true if one of elements of the vector is true
+; **lall(vector)**: true if all elements of the vector are true
+; **lcount(vector)**: number of elements in vector that are true
+; **llen(vector)**: number of elements in the vector
+
+=== vector operators ===
+Several special operators are added that work on comma (or ; or space) separated
+lists (vectors). The result of such an operator is also a vector. The arguments
+to such an operator must be of the same length, or one of them must be of 
+length 1. If one of them is of length 1, the same element will be used versus
+all elements in the other vector. Supported operators are:
+@**, @*, @/, @%, @-, @+, @>, @<, @>=, @<=, @==, @!=
+
+=== vector functions (that return vectors) ===
+; **vabs(vector)**: returns vector of absolute values of given vector
+; **vavg(vector1,vector2,...)**: returns vector with average value for each position in the vector
+; **vmax(vector1,vector2,...)**: returns vector with maximum value for each position in the vector
+; **vmin(vector1,vector2,...)**: returns vector with minimum value for each position in the vector
+; **vdef(vector,default)**: returns the given vector, but with all non numbers replaced by default
 
 === String functions ===
 ; **oneof($field,value1,cvalue2,...)**: returns true if the given field matches one of the values
