--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -26,6 +26,8 @@ the column will be calculated using the given formula. If the formula is complex
 braces around the entire field=formula.
 ; **-rf removefields**: write all, except given fields to result.
 ; **-s sortfields**: sort on given fields (uses natural sort, so that e.g. 'chr1 chr2 chr10' will be sorted correctly)
+if **sortfields** is "-", the default sort fields will be used (chromosome,begin,end,type,ref,alt).
+This will also accept name variations of the fields, such as chrom instead of chromosome.
 ; **-nh newheader**: replace header in output with fields given by this option
 ; **-sh sepheader**: write a resultfile without header, and write the header into the file **sepheader**
 ; **-hc headerincomment**: if 1, the last of the starting comment lines will be used for the header instead of the first non-comment line
