cg_pprocess_sample fixes: get chromosomes from different coverage sources, if they already exist, job args in help

--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -1,7 +1,7 @@
 = Process =
 
 == Format ==
-cg process_sample sampledir destdir ?force?
+cg process_sample ?joboptions? ?sampledir? destdir ?force?
 
 == Summary ==
 Convert Complete Genomics data to cg format and add several analysis files
