cg_validatesv.tcl in lib-exp for now

--- a/lib-exp/cg_validatesv.wiki
+++ b/lib-exp/cg_validatesv.wiki
@@ -1,5 +1,7 @@
+= Process =
+
 == Format ==
-@BASE@ -f variationfile ?-r readDistance? ?-m minLengthSurroundingSequence? ?-e maxEValue? ?-o Outputfile?
+cg validatesv -f variationfile ?-r readDistance? ?-m minLengthSurroundingSequence? ?-e maxEValue? ?-o Outputfile?
 
 == Description ==
 This command returns the two best primerpairs for validating
@@ -11,3 +13,6 @@ the breakpoints of a variation.
 * -o: Outputfile for the primers which were found [default <inputfile>_primers.tsv]
 * -e: Max e-value when searching for repeats in primer sequence [default 5]
 * -m: Minimum length of sequence were primers must be found [default 100] 
+
+== Category ==
+Validation
