--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -34,6 +34,20 @@ This will also accept name variations of the fields, such as chrom instead of ch
 ; **-hf headerfile: infile does not have a header, the header will be read from **headerfile** instead
 ; **-h**: return header fields in file
 ; **-n**: return sample names in file
+; **-g groupfields**: with this option a summary table is returned. This will contain one line with information 
+for each value or combination of values in the given groupfield(s). By default a column is added showing 
+the number of lines in the data file containing the value. Other columns can be added using the -gc option.
+Fields used in groupfields may be calculated columns; these shoud be defined in the -f option.
+This option will use memory proportional to the size of the result set!
+; **-gc groupcols**: show other columns instead of count when using the -g option. **groupcols** has the 
+following format: "field1 values1 field2 values2 ... functions". A different column will be made in the 
+summary table for each combination of values in field1,field2,... Only values given in 
+values1 (a space separated list) will be included. If value1, ... is empty, all values will be included.
+Functions determines what type of summary data will be given in each column, I takes the form of 
+e.g. avg(quality), which will return the average of the values in quality column matching the given values in
+group and column. Other functions supported are min (minimum), max (maximum), stddev (standard deviation) 
+and count (the number of lines). For count no field has to be given.
+
 The query or field lines can contain more than one line (enclose in '').
 Lines starting with a # are comments
 
