--- a/lib-exp/cg_process_illumina.wiki
+++ b/lib-exp/cg_process_illumina.wiki
@@ -1,7 +1,7 @@
 = Process_illumina =
 
 == Format ==
-cg project_illumina ?options? dir dbdir
+cg process_illumina ?options? dir dbdir
 
 == Summary ==
 process an illumina sequencing project, results in genomecomb dir with multicompar, etc.
@@ -9,7 +9,8 @@ process an illumina sequencing project, results in genomecomb dir with multicomp
 == Description ==
 
 == Arguments ==
-; **dir**: directory with illumina data for different samples, each sample in a sub directory. The proc will search for fastq files in dir/samplename/fastq/
+; **dir**: directory with illumina data for different samples, each sample in a sub directory.
+The proc will search for fastq files in dir/samplename/fastq/
 ; **dbdir**: directory containing reference data (genome sequence, annotation, ...)
 
 == Options ==
