--- a/lib/cg_vcf2tsv.wiki
+++ b/lib/cg_vcf2tsv.wiki
@@ -1,10 +1,10 @@
-= Vcf2sft =
+= Vcf2tsv =
 
 == Format ==
-cg vcf2sft ?infile? ?outfile?
+cg vcf2tsv ?infile? ?outfile?
 
 == Summary ==
-Converts data in vcf format to sft (simple feature table) format
+Converts data in vcf format to tsv (tab separated, simple feature table) format
 
 == Arguments ==
 ; **infile**: file to be converted, if not given, uses stdin. File may be compressed.
