cg_process_mastr and cg_process_illumina fixes: deps,rmtargets in var_sam_job, var_gatk_job, multicompar_job

--- a/lib-exp/cg_process_illumina.wiki
+++ b/lib-exp/cg_process_illumina.wiki
@@ -5,6 +5,8 @@ cg process_illumina ?options? dir dbdir
 
 == Summary ==
 process an illumina sequencing project, results in genomecomb dir with multicompar, etc.
+By default alignment is done using bwa, duplicates removed (using picard), realigned (using gatk).
+Variants are called using gatk and samtools.
 
 == Description ==
 
